--- a/style.css
+++ b/style.css
@@ -200,3 +200,49 @@ nav button {
 
     
 }
+
+.faq{
+    background-color: black;
+    color: white;
+    padding: 34px;
+ 
+
+}
+
+h2{
+    text-align: center;
+    font-size: 48px;
+    font-weight: 900;
+    color: white;
+    padding-top: 34px;
+    
+}
+
+.faqbox svg{
+    filter: invert(1);
+}
+
+.faqbox{
+
+    
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+
+    background-color:rgb(45 45 45);
+    padding: 24px;
+    max-width: 60vw;
+    margin: 34px auto;
+    cursor: pointer;
+    
+    
+
+
+
+
+}
+
+.faq  :hover{
+    background-color: rgb(65 65 65); ;
+    
+}
