--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ nav button {
 .faq{
     background-color: black;
     color: white;
-    padding: 34px;
+    padding: 34;
  
 
 }
@@ -231,8 +231,8 @@ h2{
 
     background-color:rgb(45 45 45);
     padding: 24px;
-    max-width: 60vw;
-    margin: 34px auto;
+    max-width: 70vw;
+    margin: 10px auto;
     cursor: pointer;
     
     
@@ -245,4 +245,32 @@ h2{
 .faq  :hover{
     background-color: rgb(65 65 65); ;
     
+}
+
+.belowbut{
+    color: white;
+    text-align: center;
+
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+}
+
+.below input{
+    padding: 18px 101px 10px 14px;
+    font-size: 20px;
+    border-radius: 4px;
+    background-color: transparent;
+    color: white;
+    border: 1px solid rgba(246, 238, 238, 0.5);
+   
+    
+}
+
+.below {
+    margin: 30px auto;
+    margin-bottom: 90px;
+    
+
 }
