--- a/style.css
+++ b/style.css
@@ -39,12 +39,13 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 62px;
+    height: 100px;
+
 }
 
 nav img {
     color: red;
-    width: 114px;
+    width: 150px;
     position: relative;
     z-index: 10;
 }
@@ -58,7 +59,7 @@ nav button {
     font-family: 'Martel sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     font-style: normal;
-    height: calc(100% - 62px);
+    height: calc(100% - 100px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,6 +93,9 @@ nav button {
 .separation {
     height: 11px;
     background-color: rgb(43, 42, 42);
+    position: relative;
+    z-index: 15;
+    
 }
 
 .btn{
